# mirofish

./: .env.example  .gitignore  .gitignore-vps  DEPLOY.md  README.md  barbeariasuite.service  fix-enums.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: backup.yml  deploy-mirofish.yml  deploy.yml
docs/superpowers/plans/: 2026-05-07-churn-integration.md  2026-05-07-mirofish-churn-microservice.md
docs/superpowers/specs/: 2026-05-07-churn-prediction-design.md
mirofish/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
mirofish/src/: __init__.py  config.py  main.py
mirofish/src/actions/: discount.py  email.py  engine.py  whatsapp.py
mirofish/src/db/: connector.py  queries.py
mirofish/src/features/: calculator.py  schema.py
mirofish/src/model/: predictor.py
mirofish/src/scheduler/: cron.py
prisma/: schema.prisma  seed.ts
prisma/client/internal/: class.ts  prismaNamespace.ts
prisma/client/models/: BarbershopColaborador.ts  BarbershopVenda.ts  ChurnAcao.ts  ChurnAcaoConfig.ts  InstagramApprovalQueue.ts  InstagramPromptVariant.ts  LinkfoodBusiness.ts  LinkfoodChecklist.ts  LinkfoodReview.ts  Network.ts  TotaliaAdvisorProfile.ts  TotaliaAuditLog.ts  TotaliaColaborador.ts  TotaliaOpportunity.ts  TotaliaPaymentMethod.ts  User.ts  (+3 more)
scripts/: README.md  deploy-docker-vps.sh  generate-secret.sh  healthcheck.sh  rollback.sh  setup-vps.sh
src/: prisma.ts
src/lib/: auth.ts  permissions.ts  prisma.ts
src/prisma_client/: browser.ts  client.ts  commonInputTypes.ts  enums.ts  index.ts
(+85 files in other folders)
