[project]
name = "mirofish"
version = "0.1.0"
description = "Churn Prediction Microservice for Barbearia VIP"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pymysql==1.1.0",
    "pandas==2.2.0",
    "numpy==1.26.4",
    "scikit-learn==1.4.0",
    "xgboost==2.0.0",
    "joblib==1.3.2",
    "python-dotenv==1.0.0",
    "httpx==0.26.0",
    "croniter==2.0.1",
    "pydantic==2.6.0",
]

[project.scripts]
mirofish = "src.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
